src/components/Project/project.scss
@import "../../variables";

.project {
  display: flex;

  align-items: center;
  height: 40rem;
  overflow: hidden;
  gap: 8rem;
  padding: 2rem;
  border-radius: 1.7rem;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  background-color: #fff;

  &--row {
    flex-direction: row;
  }

  &--row-reverse {
    flex-direction: row-reverse;
  }

  &:not(:last-child) {
    margin-bottom: 5rem;
  }

  &__img {
    max-width: 53rem;
    height: 100%;
    overflow: hidden;
    background-color: hsla(0, 0%, 46%, 0.2);
    border-radius: 1.7rem;
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);

    img {
      width: 100%;
      transform: translateY(0%);
      transition: transform 10s ease-in-out 0s;

      &:hover {
        transform: translateY(-74%);
      }
    }
  }

  &__content {
    max-width: 30rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
  }

  &__header {
    color: #2d2e32;
    font-size: 1.7rem;
    margin-bottom: 2rem;
    position: relative;
    text-transform: uppercase;
  }

  &__description {
    color: #767676;
    font-size: 1.7rem;
    font-weight: 500;
    text-align: center;
    margin-bottom: 1rem;
  }

  &__tech-container {
    display: flex;
    gap: 1rem;
    margin-top: 1rem;
    align-items: center;
    justify-content: center;
  }

  &__tech {
    color: #000;
    font-size: 1.7rem;
    font-weight: bolder;
    font-family: "Mulish", sans-serif;
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
    padding: 1rem 1.3rem;
  }

  &__links {
    display: flex;
    gap: 3rem;
    margin-top: 3rem;
    align-items: center;
    justify-content: center;

    a {
      color: #2d2e32;
      font-size: 1.7rem;
      font-weight: 500;
      gap: 5px;
      text-decoration: none;
      display: flex;
      justify-content: center;
      align-items: center;
      transition: 0.2s;

      &:hover {
        color: $blue;
      }
    }

    i {
      font-size: 2.8rem;
    }

    .link-icon {
      font-size: 2rem !important;
    }
  }
}

@media screen and (max-width: 1024px) {
  .project {
    flex-direction: column !important;
    height: auto;
    gap: 3rem;

    &__img {
      height: 35rem;
    }
  }
}

@media screen and (max-width: 768px) {
  .project {
    flex-direction: column !important;
    height: auto;
    gap: 3rem;

    &__img {
      height: 35rem;
    }
  }
}

